fix mobile spacing

--- a/src/assets/styles/Certifications.scss
+++ b/src/assets/styles/Certifications.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     text-align: left;
-    margin-bottom: -450px;
+    margin-bottom: -350px;
 
     svg {
         color: white;
@@ -16,49 +16,9 @@
     grid-gap: 50px;
 }
   
-.certification-container .certification-grid .skill {
+.certification-container .certification-grid .certification {
     align-items: center;
     text-align: left;
-}
-  
-.chip {
-    color: rgb(39, 40, 34) !important;
-    background-color: white !important;
-    font-size: 0.8rem !important;
-    height: 25px !important;
-  
-    span {
-        font-family: 'Courier Prime', monospace;
-        color: rgb(39, 40, 34);
-    }
-  
-    svg {
-        height: 15px !important;
-    }
-}
-
-.flex-chips {
-    line-height: 2;
-    margin: 0.5;
-
-    .chip-title {
-        color: white;
-        padding-right: 10px;
-    }
-}
-
-.flex-chips .MuiChip-root {
-    margin-right: 0.5em;
-}
-
-.flex-chips .MuiChip-outlined {
-    background-color: #e0e0e0;
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-        monospace;
-}
-
-.flex-chips .MuiChip-outlined span {
-    color: rgb(39, 40, 34);
 }
 
 @media screen {
@@ -73,7 +33,7 @@
             display: initial;
         }
         
-        .certification-container .certification-grid .skill {
+        .certification-container .certification-grid .certification {
             padding-bottom: 5%;
         }
     }
